--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -187,6 +187,7 @@ image::FindCommandFindApplePieSuccess.png[]
 
 Format: `find MEAL_WORD`
 
+// tag::suggest[]
 === Suggesting Meal options: `suggest`
 
 Suggest possible meals based on user calorie intake budget. +
@@ -210,7 +211,9 @@ image::SuggestCommandBefore.png[]
 image::SuggestCommandAfter.png[]
 
 Format: `suggest`
+// end::suggest[]
 
+// tag::notification[]
 === Notification that a meal is missed
 
 A notification will automatically be prompted when the application starts up or every 10 minutes if a meal is missed. +
@@ -243,6 +246,7 @@ image::NotificaitonMissedLunch.png[]
 * If dinner is missed this will be how it looks like
 
 image::NotificaitonMissedDinner.png[]
+// end::notification[]
 
 === Setting calorie intake budget: `set`
 
