Remove purple markup

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -569,29 +569,29 @@ This feature allows manager to automatically generate different kinds of reports
 
 ==== Implementation
 
-The generate PDF feature is facilitated by `[purple]#ReportGenerator#` class.
+The generate PDF feature is facilitated by `ReportGenerator` class.
 It extends Mortago with the ability to create a report, supported by https://github.com/itext/itext7[iText external library].
 Additionally, it implements the following operations:
 
-* `[purple]#ReportGenerator#generate(body, sign)#` -- Creates report containing sign name of manager in a PDF file for the specific body.
-* `[purple]#ReportGenerator#generateAll(sign)#` -- Creates reports containing sign name of manager in a PDF file for all bodies registered in Mortago.
-* `[purple]#ReportGenerator#generateSummary(sign)#` -- Creates a tabular summary report containing sign name of manager  in a PDF file for all bodies registered in Mortago.
+* `ReportGenerator#generate(body, sign)` -- Creates report containing sign name of manager in a PDF file for the specific body.
+* `ReportGenerator#generateAll(sign)` -- Creates reports containing sign name of manager in a PDF file for all bodies registered in Mortago.
+* `ReportGenerator#generateSummary(sign)` -- Creates a tabular summary report containing sign name of manager  in a PDF file for all bodies registered in Mortago.
 
 The following sequence diagram (Figure 17) shows how the generate operation works:
 
 .Sequence diagram when `genReport 1 John Doe` is executed by manager.
 image::GenReportSequenceDiagram.png[]
 
-NOTE: The lifeline for `[purple]#GenReportCommandParser#` and `[purple]#ReportGenerator#` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
+NOTE: The lifeline for `GenReportCommandParser` and `ReportGenerator` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
 
-The `genReport <BODY_ID> (sign)` command calls `[purple]#ReportGenerator#generate(body, sign)#`, which creates the document.
+The `genReport <BODY_ID> (sign)` command calls `ReportGenerator#generate(body, sign)`, which creates the document.
 
 The following activity diagram (Figure 18) summarizes what happens when manager executes a `genReport <BODY_ID> (sign)` command:
 
 .Activity diagram when `genReport 1 John Doe` is executed by manager.
 image::GenReportActivityDiagram.png[]
 
-The following code snippet from `[purple]#GenReportCommand.java#` demonstrates how an error message is displayed when manager inputs an invalid command and when report is not successfully generated:
+The following code snippet from `GenReportCommand.java` demonstrates how an error message is displayed when manager inputs an invalid command and when report is not successfully generated:
 
         if (bodyToGenReport == null) {
             throw new CommandException(MESSAGE_INVALID_ENTITY_DISPLAYED_INDEX);
