--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -32,10 +32,10 @@ image::ArchitectureDiagram.png[]
 The *_Architecture Diagram_* given above explains the high-level design of the App. Given below is a quick overview of each component.
 
 [TIP]
-The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
+The `.puml` files used to create diagrams in this document can be found in the diagrams folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+`Main` has two classes called `Main` and `MainApp`. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -78,11 +78,9 @@ The sections below give more details of each component.
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
-
 The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `PersonListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
-The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
+The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the `MainWindow` is specified in `MainWindow.fxml`.
 
 The `UI` component,
 
@@ -95,9 +93,6 @@ The `UI` component,
 [[fig-LogicClassDiagram]]
 .Structure of the Logic Component
 image::LogicClassDiagram.png[]
-
-*API* :
-link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
 
 .  `Logic` uses the `IncidentManagerParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
@@ -118,8 +113,6 @@ NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X
 .Structure of the Model Component
 image::ModelClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Model.java[`Model.java`]
-
 The `Model`:
 
 * Stores a `UserPref` object that represents the user's preferences.
@@ -135,8 +128,6 @@ image:BetterModelClassDiagram.png[]
 [[Design-Person]]
 ==== Person Model component
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Person.java[`Person.java`]
-
 The `Person`:
 
 * Represents a user account on the incident manager.
@@ -145,8 +136,6 @@ The `Person`:
 // tag::incident[]
 [[Design-Incident]]
 ==== Incident component
-
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Incident.java[`Incident.java`]
 
 The `Incident`:
 
@@ -161,8 +150,6 @@ image::IncidentClassDiagram.png[]
 [[Design-Vehicle]]
 ==== Vehicle component
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Vehicle.java[`Vehicle.java`]
-
 The `Vehicle`:
 
 image::VehicleClassDiagram.png[]
@@ -176,8 +163,6 @@ image::VehicleClassDiagram.png[]
 
 .Structure of the Storage Component
 image::StorageClassDiagram.png[]
-
-*API* : link:{repoURL}/src/main/java/seedu/address/storage/Storage.java[`Storage.java`]
 
 The `Storage` component:
 
@@ -673,20 +658,22 @@ image::deleteVehicleCommand.png[width=300]
 === Vehicle Search feature
 ==== Implementation
 
-The vehicle search mechanism features a set of different types of searches that a user could utilise. Further documentation on the commands available in this set can be found within the link:https://ay1920s1-cs2103-t11-1.github.io/main/UserGuide.html. The types of searches are as listed:
+The vehicle search mechanism features a set of different types of searches that a user could utilise.The types of searches are as listed:
 
-* Unfiltered - Displays all vehicles in `Model`.
-* District - Displays all vehicles with `District district` in list of specified districts.
-* Vehicle Number - Displays all vehicles with `VehicleNumber vehicleNumberKeyword` in `Vehicle vehicle`. Need not be exact matches.
-* Vehicle Type - Displays all vehicles with exact matches in `VehicleType vehicleType` in `Vehicle vehicle`.
+* Unfiltered - Displays all vehicles in `Model`. +
+e.g. `list-v`
+* District - Displays all vehicles with `District district` in list of specified districts. +
+e.g. `find-v dist/1 2 3`
+* Vehicle Number - Displays all vehicles with `VehicleNumber vehicleNumberKeyword` in `Vehicle vehicle`. Need not be exact matches. +
+e.g. `find-v vnum/2`
+* Vehicle Type - Displays all vehicles with exact matches in `VehicleType vehicleType` in `Vehicle vehicle`. +
+e.g. `find-v vtype/patrol car`
 
-The vehicle search mechanism is facilitated by `ModelManager`, which implements abstract class `Model`. It contains a `FilteredList<Vehicle> filteredVehicles`, which internally stores the list of displayed vehicles in the GUI. Additionally, it implements the following key method:
-
-* `updateFilteredVehiclesList(Predicate<Vehicle> predicate)` - Updates the stored filtered vehicle list with the new predicate
+Further documentation on the commands available in this set can be found in the link:https://ay1920s1-cs2103-t11-1.github.io/main/UserGuide.html#finding-a-vehicle-code-find-v-code[User Guide].
 
 ==== Design Considerations
 
-===== Aspect: How vehicle search keyword is inputted
+===== Aspect: How vehicle search with keyword is inputted
 
 * **Current choice:** Parse user input after flag (eg. `dist/` or `vnum/`)
 ** Pros:
